tests/use_mixed_in_catch_variables/use_mixed_in_catch_variables.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:4

Cannot cast `e` to empty because mixed [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:3:4
   3|   (e: empty); // ERROR - is `mixed`
         ^

References:
   test.js:2:10
   2| } catch (e) { // OK
               ^ [1]
   test.js:3:7
   3|   (e: empty); // ERROR - is `mixed`
            ^^^^^ [2]



Found 1 error
